fixed two column layout making items aligned desipte different title length

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     background-color: white;
 }
 
+button {
+    cursor: pointer;
+}
+
 .header {
     background-color: #E6A4B4;
     padding: 20px;
@@ -299,45 +303,55 @@ p, li{
     display:grid;
     overflow: hidden;
     grid-template-columns: repeat(2, 1fr);
-    gap: 5%;
+    grid-template-rows: auto auto;
+    column-gap: 5%;
     padding:30px;
+    place-items: center;
+    align-items: start;
 }
 
+.boxTwo_header{
+    align-self:end;
+}
 .boxTwo h2 {
     color: #8d4871;
+    
+}
+.boxTwo p {
+    text-align: justify;
 }
 
 .services {
     width:100%;
-    display: flex;
-    align-self: center;
+    /*display: flex;
+    align-self: center;*/
 }
 
 .nutrition {
-    display: flex;
-    flex-direction: column;
+    /*display: flex;
+    flex-direction: column;*/
     text-align: center;
 }
 
 .nutrition p{
-    height: 100%;
+    /*height: 100%;*/
     text-align: justify;
 }
 
 .energy {
-    display: flex;
-    flex-direction: column;
+    /*display: flex;
+    flex-direction: column;*/
     text-align: center;
 }
 
 .energy p{
-    height: 100%;
+    /*height: 100%;*/
     text-align: justify;
 }
 
 .buttonPos {
-    display: flex;
-    justify-content: center;
+    /*display: flex;
+    justify-content: center;*/
 }
 
 #btnMainPage3 {
@@ -348,7 +362,7 @@ p, li{
     border-radius: 15px;
     border:solid #682c4f 1px;
     font-size:25px;
-    width: 30%;
+    /*width: 30%;*/
 }
 
 #btnMainPage3:hover {
